@@ -17,6 +17,13 @@ FBCALL void *fb_DylibLoad( FBSTRING *library )
 							  "./lib%s.so",
 							  NULL };
 
+	// Just in case the shared lib is an FB one, temporarily reset the
+	// terminal, to let the 2nd rtlib capture the original terminal state.
+	// That way both rtlibs can restore the terminal properly on exit.
+	// Note: The shared lib rtlib exits *after* the program rtlib, in case
+	// the user forgot to dylibfree().
+	fb_hExitConsole();
+
 	libname[MAX_PATH-1] = '\0';
 	if( (library) && (library->data) ) {
 		for( i = 0; libnameformat[i]; i++ ) {
@@ -30,6 +37,8 @@ FBCALL void *fb_DylibLoad( FBSTRING *library )
 
 	/* del if temp */
 	fb_hStrDelTemp( library );
+
+	fb_hInitConsole();
 
 	return res;
 }
@@ -66,5 +75,11 @@ FBCALL void *fb_DylibSymbolByOrd ( void *library, short int symbol )
 /*:::::*/
 FBCALL void fb_DylibFree( void *library )
 {
+	// See above; if it's an FB lib it will restore the terminal state
+	// on shutdown
+	fb_hExitConsole();
+
 	dlclose( library );
+
+	fb_hInitConsole();
 }
